ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /tourism
        pathType: Prefix
        backend:
          service:
            name: tourism-service
            port:
              number: 80
      - path: /portfolio
        pathType: Prefix
        backend:
          service:
            name: portfolio-service
            port:
              number: 80
